Make the empty answer once, and hold only the rules that have one
A leaf whose ends this reading worked out is most leaves of most clauses, and
each of them was building an empty map, wrapping it, and putting the wrapper
in a record. The empty answer is one value now, and a copy of an empty
collection is the collection.

And the account handed on held an entry for every rule of a declaration,
almost all of them saying nothing, so a position asking what is left open at
it walked every rule to find the ones that had something. It holds the rules
that have one.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>